@@ -2,6 +2,8 @@
 
 	* gconf-property-editor.c (gconf_property_editor_class_init): Use
 	correct ordering of setup
+	(gconf_peditor_new_*): Terminate the parameter list passed to
+	g_object_new with NULL
 
 2001-11-03  Bradford Hovinen  <hovinen@ximian.com>
 
